<resources>
    <string name="app_name">TODO-Liste</string>
    <string name="btn_save">Speichern</string>
    <string name="btn_abort">Abbrechen</string>
    <string name="hint_description">Beschreibung</string>
    <string name="hint_name">Titel</string>
    <string name="btn_create">Erstellen</string>
    <string name="btn_addContact">Kontakt hinzufügen</string>
    <string name="btn_date">Datum</string>
    <string name="btn_time">Uhrzeit</string>
    <string name="apply">Übernehmen</string>
    <string name="abort">Abbrechen</string>
    <string name="hint_dueDate">Fällig am</string>
    <string name="hint_contactfilter">Durchsuchen</string>
    <string name="hint_email">E-Mailadresse</string>
    <string name="hint_password">Passwort</string>
    <string name="login">Einloggen</string>
    <string name="dialog_confirmTodoDeletion">Todo löschen?</string>
    <string name="delete">Löschen</string>
    <string name="btn_deleteTodo">Todo löschen</string>
    <string name="pleasewait">Bitte warten</string>
    <string name="loginerror">There was an error.</string>
    <string name="checkingforwebservice">Warten auf WebService...</string>
    <string name="syncingtodos">Todos synchronisieren...</string>
    <string name="webservicenotavailable">WebService nicht erreichbar.</string>
    <string name="sortAsc">Aufsteigend</string>
    <string name="sortDesc">Absteigend</string>
    <string name="deleteLocal">Lokale Daten löschen</string>
    <string name="deleteRemote">Remote Daten löschen</string>
    <string name="sync">Synchronisieren</string>
    <string name="sortorder">Sortierung</string>
    <string name="importanceanddate">Wichtigkeit + Datum</string>
    <string name="dateandimportance">Datum + Wichtigkeit</string>
    <string name="sortFavoriteBeforeDate">favoritebeforedate</string>
    <string name="preference_file_key">MyPreferences</string>
    <string name="error_emailnotvalid">EMAIL NICHT GÜLTIG!</string>
    <string name="rememberme">Email merken?</string>
    <string name="selectnumber">Rufnummer auswählen</string>
    <string name="executewith">Ausführen mit</string>
    <string name="detailview_title">TODO Detailansicht</string>
    <string name="listview_title">TODO Liste</string>
    <string name="loginview_title">Login</string>
</resources>
