<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="todo"
            type="de.zitruism.thl_todo_liste.database.model.Todo" />
        <variable
            name="contacts"
            type="java.util.List" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/footer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/isFavorite"
                    android:hint="@string/hint_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameedittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={todo.name}"
                        android:maxLines="1"
                        android:inputType="text"
                        android:transitionName="TRANSITION_NAME"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/isFavorite"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:isFavorite="@{todo.isFavourite()}"
                    app:layout_constraintEnd_toStartOf="@+id/isDone"
                    app:layout_constraintTop_toTopOf="@id/name"
                    app:layout_constraintBottom_toBottomOf="@id/name"
                    android:transitionName="TRANSITION_FAVORITE" />

                <ImageView
                    android:id="@+id/isDone"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    app:isDone="@{todo.isDone()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/name"
                    app:layout_constraintBottom_toBottomOf="@id/name"
                    android:transitionName="TRANSITION_DONE"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dueDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/hint_dueDate">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dueDateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false"
                        app:date="@{todo.getExpiry()}"
                        android:transitionName="TRANSITION_DUEDATE"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/dueDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/hint_description">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={todo.description}" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/description"
                    app:layout_constraintStart_toStartOf="parent"
                    android:text="@string/btn_addContact" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/contactList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/addContact"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:data="@{contacts}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="?android:attr/buttonBarStyle">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/abort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarNegativeButtonStyle"
                android:text="@string/btn_abort"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarPositiveButtonStyle"
                android:text="@{todo.id != null ? @string/btn_save : @string/btn_create}"
                android:enabled="@{todo.name.length() > 0 &amp;&amp; todo.expiry != null}"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>